# cskia

./:  .gitignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/modules/: AddCSkiaTargetUtils.cmake  CSkiaVersion.cmake  ConfgureTriple.cmake  ConfigureAr.cmake  ConfigureOptions.cmake  ConfigureRequirePackages.cmake  ConfigureStdPath.cmake  FindGoogleTest.cmake  ImportSkia.cmake  ReadDarwinSDKInfo.cmake  SummaryOutput.cmake  Utils.cmake
cmake/toolchains/: linux_aarch64_toolchain.cmake  linux_toolchain.cmake  linux_x64_toolchain.cmake
include/cskia/core/: CSKPaint.h
tests/: CMakeLists.txt
